Import of FPIVARI/SquareMaker-4.1 from CPAN.
gitpan-cpan-distribution: SquareMaker
gitpan-cpan-version:      4.1
gitpan-cpan-path:         FPIVARI/SquareMaker-4.1.tar.gz
gitpan-cpan-author:       FPIVARI
gitpan-cpan-maturity:     released

--- a/HISTORY
+++ b/HISTORY
@@ -27,3 +27,6 @@ Add examples on use of separator and skip blanks
 Version 4.0
 Now you can use squaremaker script without HTML form and cgi-bin using
 Square.dat Square.cnf configuration files
+
+Version 4.1
+Add Colours: Background Colour, Foreground Colour, Transparent Background
