Import of FPIVARI/SquareMaker-4.2 from CPAN.
gitpan-cpan-distribution: SquareMaker
gitpan-cpan-version:      4.2
gitpan-cpan-path:         FPIVARI/SquareMaker-4.2.tar.gz
gitpan-cpan-author:       FPIVARI
gitpan-cpan-maturity:     released

--- a/HISTORY
+++ b/HISTORY
@@ -30,3 +30,7 @@ Square.dat Square.cnf configuration files
 
 Version 4.1
 Add Colours: Background Colour, Foreground Colour, Transparent Background
+
+Version 4.2
+Add new examples on Magic Square and Numerology
+Add support for CGI.pm
